locust-worker-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: locust-worker-deployment
  labels:
    app: locust
    identifier: worker
spec:
  replicas: 6
  selector:
    matchLabels:
      app: locust
  template:
    metadata:
      labels:
        app: locust
        identifier: worker
    spec:
      containers:
      - name: locust
        args: ["-f", "/test/test.py", "--slave", "--master-host=locust-master-deployment"]
        image: mattmatch/docker-locust:latest
        ports:
        - containerPort: 8089
        - containerPort: 5557
        - containerPort: 5558
        volumeMounts:
        - name: config-volume
          mountPath: /test
      volumes:
      - name: config-volume
        configMap:
          name: locust-config
