locust-master-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: locust-ingress
  labels:
    app: locust
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - backend:
          serviceName: locust-master-deployment
          servicePort: 8089
